--- a/DaoOperation/src/main/resources/role.properties
+++ b/DaoOperation/src/main/resources/role.properties
@@ -1,4 +1,7 @@
 db_user=user does not exist
 db_unsuccessfull=3 unsuccesful logins,your account is deactivated
-db_incorrect_pw=Incorrect  Password try again
+db_incorrect_pw=Incorrect Password try again
 db_success=Success
+accInactive=Your account is inactive
+attempt2=2 attempts left
+attempt1=1 attempt left
