--- a/DaoOperation/src/main/resources/role.properties
+++ b/DaoOperation/src/main/resources/role.properties
@@ -5,3 +5,5 @@ db_success=Success
 accInactive=Your account is inactive
 attempt2=2 attempts left
 attempt1=1 attempt left
+incorrect=password given is incorrect,u have 3more attempts
+deactivated=your account had been deactivated
